--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "hello": "node hello/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --harmony --reporter spec --require should */test.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,13 @@
   "homepage": "https://github.com/robertdani89/koa-getting-started#readme",
   "dependencies": {
     "koa": "^2.13.4"
+  },
+  "devDependencies": {
+    "eslint": "^8.7.0",
+    "eslint-config-koa": "^2.0.2",
+    "eslint-config-standard": "^16.0.3",
+    "mocha": "^9.2.0",
+    "should": "^13.2.3",
+    "supertest": "^6.2.2"
   }
 }
